july doc api测试工具修改

--- a/src/main/resources/static/css/jsoneditor.css
+++ b/src/main/resources/static/css/jsoneditor.css
@@ -185,7 +185,7 @@ div.jsoneditor-tree button {
     margin: 0;
     border: none;
     cursor: pointer;
-    background: transparent url("./jsoneditor-icons.svg");
+    background: transparent url("../other/jsoneditor-icons.svg");
 }
 
 div.jsoneditor-mode-view tr.jsoneditor-expandable td.jsoneditor-tree,
@@ -311,7 +311,7 @@ tr.jsoneditor-selected.jsoneditor-first button.jsoneditor-contextmenu {
 }
 
 div.jsoneditor-tree button.jsoneditor-dragarea {
-    background: url("./jsoneditor-icons.svg") -72px -72px;
+    background: url("../other/jsoneditor-icons.svg") -72px -72px;
     cursor: move;
 }
 
@@ -391,7 +391,7 @@ div.jsoneditor-tree .jsoneditor-schema-error {
     height: 24px;
     padding: 0;
     margin: 0 4px 0 0;
-    background: url("./jsoneditor-icons.svg") -168px -48px;
+    background: url("../other/jsoneditor-icons.svg") -168px -48px;
 }
 
 .jsoneditor-schema-error .jsoneditor-popover {
@@ -553,7 +553,7 @@ div.jsoneditor-tree .jsoneditor-schema-error {
     height: 24px;
     padding: 0;
     margin: 0 4px 0 0;
-    background: url("./jsoneditor-icons.svg") -168px -48px;
+    background: url("../other/jsoneditor-icons.svg") -168px -48px;
 }
 
 /* ContextMenu - main menu */
@@ -636,7 +636,7 @@ div.jsoneditor-contextmenu div.jsoneditor-icon {
     border: none;
     padding: 0;
     margin: 0;
-    background-image: url("./jsoneditor-icons.svg");
+    background-image: url("../other/jsoneditor-icons.svg");
 }
 
 div.jsoneditor-contextmenu ul li button div.jsoneditor-expand {
@@ -645,7 +645,7 @@ div.jsoneditor-contextmenu ul li button div.jsoneditor-expand {
     height: 24px;
     padding: 0;
     margin: 0 4px 0 0;
-    background: url("./jsoneditor-icons.svg") 0 -72px;
+    background: url("../other/jsoneditor-icons.svg") 0 -72px;
     opacity: 0.4;
 }
 
@@ -823,7 +823,7 @@ div.jsoneditor-menu > div.jsoneditor-modes > button {
     padding: 0;
     border-radius: 2px;
     border: 1px solid transparent;
-    background: transparent url("./jsoneditor-icons.svg");
+    background: transparent url("../other/jsoneditor-icons.svg");
     color: white;
     opacity: 0.8;
     font-family: arial, sans-serif;
@@ -966,7 +966,7 @@ table.jsoneditor-search button {
     padding: 0;
     margin: 0;
     border: none;
-    background: url("./jsoneditor-icons.svg");
+    background: url("../other/jsoneditor-icons.svg");
     vertical-align: top;
 }
 
